# skladnica-with-walenty

./: .gitignore  README.md  runtest2.sh  skladnica-with-walenty.cabal  stack.yaml
experiment/: arcs-by-length.R  by-length.R  compare-by-length.R  compare-by-prop.R  prop-by-length.R  prop-by-prop.R
experiment/full/all-pm/: data.csv
experiment/full/all-pm-st/: data.csv  errors.csv
experiment/medium/all-pm/: data.csv
experiment/medium/all-pm-st/: data.csv
experiment/medium/all-pm-st-cw/: data.csv
src/NLP/Skladnica/: Extract.hs  Map.hs  New.hs  Walenty.hs
src/NLP/Skladnica/Walenty/: Grammar.hs  Mapping.hs  MweTree.hs  NcpNEs.hs  Prune.hs  Search.hs  Search2.hs  Sejf.hs  Select.hs
tmp/: test.hs  test2.hs
tools/: pretty-print.sh  skladnica.hs
