name:               skladnica-with-walenty
version:            0.1
synopsis:           Identifying occurrences of Walenty entries in Składnica
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2016 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/skladnica-with-walenty
build-type:         Simple


library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4.8      && < 5
      , containers          >= 0.5      && < 0.6
      , text                >= 1.1      && < 1.3
      , skladnica           >= 0.1      && < 0.2
      , walenty             >= 0.1      && < 0.2

    exposed-modules:
        NLP.Skladnica.Walenty

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/skladnica-with-walenty.git
