name:               skladnica-with-walenty
version:            0.2
synopsis:           Identifying occurrences of Walenty entries in Składnica
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2016 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/skladnica-with-walenty
build-type:         Simple


library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4.8      && < 5
      , containers          >= 0.5      && < 0.6
      , text                >= 1.1      && < 1.3
      -- , bytestring          >= 0.10     && < 0.11
      , mtl                 >= 2.1      && < 2.3
      , transformers        >= 0.3      && < 0.5
      , directory           >= 1.2      && < 1.3
      , filemanip           >= 0.3      && < 0.4
      , skladnica           >= 0.1      && < 0.2
      , walenty             >= 0.1      && < 0.2
      , partage             >= 0.3      && < 0.4
      , data-memocombinators >= 0.5     && < 0.6
      , pipes               >= 4.1      && < 4.2
      , PSQueue             >= 1.1      && < 1.2
      , mmorph              >= 1.0      && < 1.1
      , random              >= 1.1      && < 1.2
      , nkjp                >= 0.5      && < 0.6
      , data-named          >= 0.6      && < 0.7
      , tagsoup             >= 0.13.4   && < 0.15
      , polysoup            >= 0.6      && < 0.7

    exposed-modules:
        NLP.Skladnica.Walenty
      , NLP.Skladnica.Extract
      , NLP.Skladnica.Walenty.Search
      , NLP.Skladnica.Walenty.Prune
      , NLP.Skladnica.Walenty.Grammar
      , NLP.Skladnica.Walenty.Select
      , NLP.Skladnica.Walenty.Sejf
      , NLP.Skladnica.Walenty.NcpNEs
      , NLP.Skladnica.Walenty.Search2
      , NLP.Skladnica.Walenty.MweTree
      , NLP.Skladnica.Walenty.Mapping

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/skladnica-with-walenty.git
